// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditField /> Select Tests renders DocumentMenu correctly 1`] = `
<div>
  <div
    class="main"
  >
    <div
      style="position: fixed; top: 0px; display: flex; flex-direction: row; justify-content: center; align-items: center; width: 100%; height: 50px; background-color: rgb(63, 80, 181); border-bottom: 1px solid #d8d8d8; font-weight: bold; padding: 0px 20px 0px 0px; box-sizing: border-box; color: rgb(255, 255, 255); font-size: 18px;"
    >
      <div
        style="width: 50px;"
      />
      <div
        style="margin-left: auto; margin-right: auto;"
      >
        Select Type
      </div>
      <div
        style="width: 50px;"
      />
    </div>
    <div
      class="content"
    >
      <form
        class="form"
      >
        <fieldset>
          <div
            class="field"
          >
            <select
              data-testid="select-field-type"
              name="type"
              required=""
              title="Select Type"
              type="select"
            >
              <option
                value="1"
              >
                Type-1
              </option>
              <option
                value="2"
              >
                Type-2
              </option>
              <option
                value="3"
              >
                Type-3
              </option>
            </select>
          </div>
        </fieldset>
        <div
          style="text-align: center;"
        >
          <button
            type="submit"
          >
            Submit
          </button>
        </div>
      </form>
    </div>
    <div
      style="display: flex; align-items: center; justify-content: center; width: 100%; height: 40px; background-color: rgb(51, 51, 51); color: rgb(255, 255, 255); position: fixed; bottom: 0px;"
    >
      Footer Menu
    </div>
  </div>
</div>
`;

exports[`<EditField /> TextArea Tests renders DocumentMenu correctly 1`] = `
<div>
  <div
    class="main"
  >
    <div
      style="position: fixed; top: 0px; display: flex; flex-direction: row; justify-content: center; align-items: center; width: 100%; height: 50px; background-color: rgb(63, 80, 181); border-bottom: 1px solid #d8d8d8; font-weight: bold; padding: 0px 20px 0px 0px; box-sizing: border-box; color: rgb(255, 255, 255); font-size: 18px;"
    >
      <div
        style="width: 50px;"
      />
      <div
        style="margin-left: auto; margin-right: auto;"
      >
        Enter Name
      </div>
      <div
        style="width: 50px;"
      />
    </div>
    <div
      class="content"
    >
      <form
        class="form"
      >
        <fieldset>
          <div
            class="field"
          >
            <textarea
              cols="50"
              data-testid="textarea-field-name"
              maxlength="50"
              name="name"
              required=""
              rows="1"
              title="Enter Name"
              type="textarea"
            />
          </div>
        </fieldset>
        <div
          style="text-align: center;"
        >
          <button
            type="submit"
          >
            Submit
          </button>
        </div>
      </form>
    </div>
    <div
      style="display: flex; align-items: center; justify-content: center; width: 100%; height: 40px; background-color: rgb(51, 51, 51); color: rgb(255, 255, 255); position: fixed; bottom: 0px;"
    >
      Footer Menu
    </div>
  </div>
</div>
`;
